# ppgui

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini  main.cpp
.github/workflows/: ci.yaml  cmake.yaml  wasm.yaml
assets/patches/: imgui.patch  implot.patch
deploy/: Dockerfile  Dockerfile.wasm  compose.yaml
glfw_wgpu/: Makefile.emscripten
glfw_wgpu/web/: index.html
scripts/: cgi.pl  compile.sh  wasm.sh
src/: main.cpp
